<resources>
    <string name="app_name">TeamProjectManager</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="login">login</string>
    <string name="miss_pw">비밀번호를 잊으셨나요?</string>
    <string name="join">회원가입</string>
    <string name="project_manager">Project Manager</string>
    <string name="introduce">Team Project Manager</string>
    <string name="title_activity_home">Project Manager</string>
    <string name="actionbar_settings">설정</string>
    <string name="actionbar_my_info">내정보</string>
    <string name="actionbar_notice">알림</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="project_create">프로젝트 생성하기</string>
    <string name="add_member">멤버 추가</string>
    <string name="create_button">생성 완료</string>
    <string name="cancel">취소</string>
    <string name="board_write_hint">멤버들에게 전할 소식을 작성하세요.</string>
    <string name="board_search_hint">작성자,글 내용으로 검색</string>
    <string name="board_search">검색</string>
    <string name="board_write">작성</string>

</resources>
